--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,25 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ríos Durán S.A.S. generamos una experiencia en asesorías y consultorías legales, queremos gestionar tus oportunidades de mejora e impulsar tu crecimiento y éxito empresarial."
     />
-    <meta name="author" content="Diego Alejandro Jaime Baron">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="author" content="Diego Alejandro Jaime Baron" />
+    <meta
+      name="keywords"
+      content="Riosduran, legal, consulting, laboral, civil, administrativo, familia, Asesoría, Contratos, Propiedad, informática, asambleas, ingeniería, Auditoría , administración , nodejs, políticias, manuales , empresa"
+    />
+
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
