--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Tangerine"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +16,7 @@
     <meta name="author" content="Diego Alejandro Jaime Baron" />
     <meta
       name="keywords"
-      content="Riosduran, legal, consulting, laboral, civil, administrativo, familia, Asesoría, Contratos, Propiedad, informática, asambleas, ingeniería, Auditoría , administración , nodejs, políticias, manuales , empresa"
+      content="Riosduran, abogados, legal, consulting, Derecho laboral, Derecho civil, Derecho administrativo, Derecho familia, Asesoría legal, Contratos, Propiedad, administración, políticias, manuales , empresa"
     />
 
     <link rel="apple-touch-icon" href="/logo192.png" />
